Site: Fix site header at top of page, correct the layout shift when scrollbar is present, modify how header bottom is drawn

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -28,44 +28,42 @@ body {
 }
 
 #site-header-section {
+    height: 137px;
     margin: 0px;
     padding: 0px;
+    position: fixed;
+    width: 100%;
 }
 
 #site-header {
     background-color: #5d0000;
+    border-bottom-color: white;
+    border-bottom-width: 1px;
+    border-bottom-style: dashed;
     color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 125px;
+    height: 136px;
     width: 100%;
 }
 
 #site-header-bottom {
-    background-color: #5d0000;
-    margin-top: 3px;
-    // margin-bottom: 1px;
-    border-bottom-color: white;
-    border-bottom-width: 1px;
-    border-bottom-style: dashed;
-    height: 9px;
+    background-color: white;
+    margin-top: calc(-9px - 3px);
+    height: 3px;
     width: 100%;
 }
 
-// TODO: fix recentering of name when scrollbar is present
 #site-name {
     background-color: rgba(0, 0, 0, 0);
     display: flex;
     flex-direction: row;
     margin: 0px;
     padding: 5px;
+    padding-left: calc(100vw - 100%);
     order: 1;
-}
-
-#site-name:hover {
-    backgorund-color: rgba(0, 0, 0, 0);
 }
 
 #site-name-a {
@@ -87,6 +85,12 @@ body {
     padding-top: 44px;
     font-size: 42px;
     order: 3;
+}
+
+#site-header-filler {
+    padding: 0px;
+    padding-bottom: 137px;
+    margin: 0px;
 }
 
 a {
